# kanta

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
backend/: CLAUDE.md  Dockerfile  Dockerfile_arm64  README.md  alembic.ini  pyproject.toml  requirements.txt  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 4212f9fd24a2_dropped_binary_blob_columns_introduced_.py  4a1b53bc786c_add_description_column_to_events.py  e2aa0344bced_add_event_image_and_qr_code_image_to_.py
backend/src/app/: main.py
backend/src/app/auth/: security.py
backend/src/app/clusters/: router.py  schemas.py  service.py  utils.py
backend/src/app/clusters/tests/: test_schemas.py  test_service.py  test_utils.py
backend/src/app/core/: azure_blob.py  config.py
backend/src/app/db/: base.py  db_raw.py
backend/src/app/db/migrations/: 0001_init_schema.sql  0003_rename_column.sql
backend/src/app/events/: exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/app/events/tests/: conftest.py  test_models.py  test_schemas.py  test_service.py
backend/src/app/images/: models.py  router.py  schemas.py  service.py
backend/src/app/images/tests/: conftest.py  test_models.py  test_schemas.py  test_service.py
backend/src/app/system/: router.py
backend/src/app/tests/clusters/: conftest.py  test_schemas.py  test_service.py  test_utils.py
backend/src/app/tests/events/: __init__.py  test_models.py  test_schemas.py  test_service.py
backend/src/app/tests/images/: conftest.py  test_models.py  test_schemas.py  test_service.py
backend/tests/: pytest.ini  test_conn_asyncpg.py  test_conn_psycopg2.py  test_database.py  test_database_orm.py
cluster-faces/: .gitignore  CLAUDE.md  Dockerfile  cluster-chinesewhispers.py  cluster-dbscan.py  face_clusters.parquet  face_embeddings.parquet  main.py  pyproject.toml
cluster-faces/conf/: config.yaml
cluster-faces/src/: clustering.py  processing.py
cluster-faces/tests/: test_face_clustering.py
cluster-faces/tests/data/: face_embeddings.parquet
data/: CLAUDE.md  README.md  main.py  pyproject.toml
docs/: brownfield-architecture.md  brownfield-prd.md
encode-faces/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run.sh
encode-faces/src/db/: database.py  database_orm.py  models.py
encode-faces/src/db/migrations/: 0001_init_schema.sql  0002_add_description_column.sql
encode-faces/src/utils/: azure_blob_storage.py
encode-faces/tests/: test_conn_psycopg2.py  test_database_orm.py
frontend/: CLAUDE.md  Dockerfile  Dockerfile.dev  Home.py  README.md  package-lock.json
frontend-nextjs/: package-lock.json  package.json
nextjs-frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  (+1 more)
(+189 files in other folders)
